--- a/www/static/css/index/dashboard.css
+++ b/www/static/css/index/dashboard.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    padding-top: 50px;
+    padding-top: 10px;
 }
 
 
@@ -25,39 +25,36 @@ body {
     border: 0;
 }
 
-/*
- * Sidebar
- */
 
-/* Hide for mobile, show later */
+
 .sidebar {
-    display: none;
+    width: 100%;
+    position: fixed;
+    top: 6px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
 }
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding: 20px;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-    }
-}
+
 
 /* Sidebar navigation */
 .nav-sidebar {
     margin-right: -21px; /* 20px padding + 1px border */
     margin-bottom: 5px;
     margin-left: -20px;
+    margin-left: -20px;
 }
+
 .nav-sidebar > li > a {
     padding-right: 20px;
-    padding-left: 20px;
+    padding-left: 35px;
+    height: 35px;
 }
 .nav-sidebar > .active{
     color: #fff;
@@ -65,7 +62,7 @@ body {
 }
 
 .nav-sidebar .nav-tag{
-    padding-left: 10px;
+    padding-left: 20px;
 }
 
 /*
